final changes lecture 2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lan="en">
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='./content/app.css' />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
 </html>
+
